--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -9,12 +9,14 @@
 
 :root {
   --dark-gray: #333333;
-  --pink: #ff69b4;
+  --light-gray: #DFDFDF;
+  --solid-pink: #FF3F3F;
+  --light-pink: #ff7e7e;
+  --opacity-pink: rgba(255, 63, 63, 0.6);
   --white: #ffffff;
   --font-family-base: 'Helvetica Neue', Arial, sans-serif;
   --font-size-base: 16px;
   --line-height-base: 1.5;
-  --spacing-unit: 1rem;
 }
 
 body {
@@ -26,14 +28,10 @@ body {
 }
 
 /* Cabeçalhos */
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, p {
   font-weight: 600;
-  margin-bottom: var(--spacing-unit);
-}
-
-/* Parágrafos */
-p {
-  margin-bottom: var(--spacing-unit);
+  margin: 0;
+  padding: 0
 }
 
 /* Links */
@@ -45,13 +43,6 @@ a {
 
 a:hover {
   color: var(--secondary-color);
-}
-
-/* Imagens */
-img {
-  max-width: 100%;
-  height: auto;
-  display: block;
 }
 
 /* Listas */
